[tool.poetry]
name = "atom-app"
version = "0.1.0"
description = ""
authors = ["Andrew"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.3"
uvicorn = {extras = ["standart"], version = "^0.32.0"}
email-validator = "^2.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
